depthbin balanced sequences

--- a/depth_discrimination_MTurk/DepthDiscrim_HTML.html
+++ b/depth_discrimination_MTurk/DepthDiscrim_HTML.html
@@ -151,7 +151,9 @@
 		    
 		    <p>For each trial, you will see two images of scenes with a red, black, and green circle (the target) displayed over an object in the scene one after another.</p>
 
-		    <p>Your task is to respond which image's target was closer to you - Image 1 or Image 2? Press the "c" key on your keyboard to indicate Image 1 or press the "m" key on your keyboard to indicate Image 2. </p>
+		    <p>Your task is to respond which image's target was closer to you - Image 1 or Image 2? Press the "z" key on your keyboard to indicate Image 1 or press the "m" key on your keyboard to indicate Image 2. </p>
+
+		    <p>We ask that you pay close attention on each trial so you detect all of the targets, but occasionally you may accidentally miss one. If you do, please press the '0' key. You will not be penalized for missing a target, we'd just like to know so we can factor this into our analysis later.</p>
 
 		    <b>Please respond as quickly and accurately as possible! </b>
 
@@ -299,6 +301,10 @@
 			<p>Press the <b> "m"</b> key on your keyboard to respond <b> "Image 2"</b>. </p> -->
 
 		</div>
+
+		<div id="feedback" class="feedbackDiv">
+		</div>
+
 
 		<div id="r_scene" class="r_sceneDiv">
 			<img id= "r_scene_image" src="" width=750>
